--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,10 @@
   <title>Hello, world!</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
+<div class="container" id="main">
+  <h1>Hello, world!</h1>
+</div>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
